Cmd+Shift+> doesn't seem to work on the Mac. I suspect there is a conflicting use of the shortcut somewhere else. So I added an autosub of .sub. that puts in a section with one greater level of indent.

--- a/prince/res/xml/autosubs.xml
+++ b/prince/res/xml/autosubs.xml
@@ -36,6 +36,7 @@
   <sub ctx="text" tp="sc"><pattern>.Lg.</pattern><data>toggleTextTag('Large',true);</data></sub>
   <sub ctx="text" tp="sc"><pattern>.LG.</pattern><data>toggleTextTag('LARGE',true);</data></sub>
   <sub ctx="text" tp="sc"><pattern>.sec.</pattern><data>insertSectionTag('section',true);</data></sub>
+  <sub ctx="text" tp="sc"><pattern>.sub.></pattern><data>deleteSelection();goDoCommand('cmd_insertSubstructure');></data></sub>
   <sub ctx="text" tp="sc"><pattern>.ttl.</pattern><data>insertFrontMatterItem('title',true);</data></sub>
   <sub ctx="text" tp="sc"><pattern>.auth.</pattern><data>insertParaTag('author',true);</data></sub>
   <sub ctx="text" tp="sc"><pattern>.addr.</pattern><data>insertParaTag('address',true);</data></sub>
@@ -237,13 +238,13 @@
   <sub ctx="math" tp="sc"><pattern>umcmol</pattern><data>insertMathunit('micromol','true');</data></sub>
   <sub ctx="math" tp="sc"><pattern>umcN</pattern><data>insertMathunit('microN','true');</data></sub>
   <sub ctx="math" tp="sc"><pattern>umcPa</pattern><data>insertMathunit('microPa','true');</data></sub>
-  <sub ctx="math" tp="sc"><pattern>umcrad</pattern><data>insertMathunit('microrad','true');</data></sub>  
+  <sub ctx="math" tp="sc"><pattern>umcrad</pattern><data>insertMathunit('microrad','true');</data></sub>
   <sub ctx="math" tp="sc"><pattern>umcS</pattern><data>insertMathunit('microS','true');</data></sub>
   <sub ctx="math" tp="sc"><pattern>umcs</pattern><data>insertMathunit('micros','true');</data></sub>
   <sub ctx="math" tp="sc"><pattern>umcT</pattern><data>insertMathunit('microT','true');</data></sub>
   <sub ctx="math" tp="sc"><pattern>umcV</pattern><data>insertMathunit('microV','true');</data></sub>
   <sub ctx="math" tp="sc"><pattern>umcWa</pattern><data>insertMathunit('microW','true');</data></sub>
-  <sub ctx="math" tp="sc"><pattern>umcWb</pattern><data>insertMathunit('microWb','true');</data></sub> 	
+  <sub ctx="math" tp="sc"><pattern>umcWb</pattern><data>insertMathunit('microWb','true');</data></sub>
   <sub ctx="math" tp="sc"><pattern>ume</pattern><data>insertMathunit('m','true');</data></sub>
   <sub ctx="math" tp="sc"><pattern>uMeV</pattern><data>insertMathunit('MeV','true');</data></sub>
   <sub ctx="math" tp="sc"><pattern>umF</pattern><data>insertMathunit('mF','true');</data></sub>
