Bug 3648 -- can't enter description list item. Now press right arrow after you have entered the label.

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -1056,6 +1056,11 @@ line {
   border: 2px solid rgb(220,210,220);
   -moz-border-radius: 8px;
 }
+descriptionListItem {
+  border: 2px solid rgb(220,210,220);
+  background-color: #f0f0ff;
+  -moz-border-radius: 8px;
+}
 
 *[showinvis="true"] numberedListItem + numberedListItem {
   margin-top: -5px;
