--- a/prince/res/css/baselatex.css
+++ b/prince/res/css/baselatex.css
@@ -219,7 +219,7 @@ otfont {
 descriptionLabel {
   margin-right: 1em;
   min-width: .5em;
-  display: inline;
+  display: inline-block;
   border: thin solid #BBBB77;
 /*  border-radius: 3px;
 */  background-color: #FFFFBB;
