Change subparagraph to look like paragraph, except without the numbering.

--- a/prince/res/css/proc.css
+++ b/prince/res/css/proc.css
@@ -203,6 +203,12 @@ paragraph defaulttitletag:after {
   color: gray;
 }
 
+subparagraph>*:first-child {
+  font-size: medium;
+  font-weight: normal;
+  font-style: italic;
+}
+
 subparagraph defaulttitletag:after {
   content: "Replace this subsubsubsubsection title"; 
   color: gray;
