--- a/layout/mathml/content/src/mathml.css
+++ b/layout/mathml/content/src/mathml.css
@@ -420,7 +420,7 @@ mtd[-moz-math-columnline="dashed"] {
 
 ::-moz-math-stretchy {
   font-style: normal;
-  font-family: MathJax_Math; /* an empty family is ignored as an error and behaves like inherit */
+  font-family: MathJax_Main; /* an empty family is ignored as an error and behaves like inherit */
 /*  background-color: #3C6; */
 }
 ::-moz-math-anonymous {
