--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -458,10 +458,13 @@ plotwrapper {
 }
 */
 
+/*
+mml|mi [msimathname="true"] {
+  color: gray; 
+  font-style: normal;
+}
 
-mml|mi [msimathname="true"] {color: gray; }
-
-
+*/
 
 mml|mi[tempinput="true"]::before
 {
