--- a/prince/res/xml/autosubs.xml
+++ b/prince/res/xml/autosubs.xml
@@ -8,13 +8,13 @@
   <sub ctx="text" tp="subst"><pattern> '</pattern><data> &#x2018;</data><context/><info>0,0</info></sub>
   <sub ctx="text" tp="subst"><pattern>&#x2019;'</pattern><data>&#x201D;</data><context/><info>0,0</info></sub>
   <sub ctx="text" tp="subst"><pattern>''</pattern><data>&#x201D;</data><context/><info>0,0</info></sub>
-<!--   <sub ctx="text" tp="subst"><pattern>"</pattern><data>&#x201D;</data><context/><info>0,0</info></sub>
-  <sub ctx="text" tp="subst"><pattern> "</pattern><data> &#x201C;</data><context/><info>0,0</info></sub> -->
+  <sub ctx="text" tp="subst"><pattern>"</pattern><data>&#x201D;</data><context/><info>0,0</info></sub>
+  <sub ctx="text" tp="subst"><pattern> "</pattern><data> &#x201C;</data><context/><info>0,0</info></sub>
   <sub ctx="text" tp="subst"><pattern>&#x201C;&#x00A0;</pattern><data>&#x201D; </data><context/><info>0,0</info></sub>
- <!--  <sub ctx="text" tp="subst"><pattern>."</pattern><data>.&#x201D;</data><context/><info>0,0</info></sub>
+  <sub ctx="text" tp="subst"><pattern>."</pattern><data>.&#x201D;</data><context/><info>0,0</info></sub>
   <sub ctx="text" tp="subst"><pattern>,"</pattern><data>,&#x201D;</data><context/><info>0,0</info></sub>
   <sub ctx="text" tp="subst"><pattern>?"</pattern><data>?&#x201D;</data><context/><info>0,0</info></sub>
-  <sub ctx="text" tp="subst"><pattern>!"</pattern><data>!&#x201D;</data><context/><info>0,0</info></sub> -->
+  <sub ctx="text" tp="subst"><pattern>!"</pattern><data>!&#x201D;</data><context/><info>0,0</info></sub>
   <sub ctx="text" tp="subst"><pattern>&#x2013;&gt;#</pattern><data>&#x2192;</data><context/><info>0,0</info></sub>
   <sub ctx="text" tp="subst"><pattern>&lt;&#x2013;#</pattern><data>&#x2190;</data><context/><info>0,0</info></sub>
   <sub ctx="both" tp="subst"><pattern>|^#</pattern><data>&#x2191;</data><context/><info>0,0</info></sub>
