Tried changing the -moz-user-select attribute for buttons in the content, to keep the cursor out of them.

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -787,6 +787,7 @@ button[class="frontmattertag"] {
   font-style: normal;
   opacity: 0.7;
   display: inline;
+  -moz-user-select: all;
 }
 
 /* Selection rules */
